# ddd_drf_api

./: .editorconfig  .gitignore  .pre-commit-config.yaml  README.md  create_project_structure.py  pyproject.toml
